--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/node": "^18.14.6",
     "babel-loader": "^9.1.2",
+    "jest": "^29.5.0",
     "ts-loader": "^8.4.0",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
